<resources>
    <string name="app_name">IntelimentJson</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="select_your_location">Select Your Location</string>
    <string name="car">Car:</string>
    <string name="car_ks">Car Ks</string>
    <string name="train_ks">Train Ks</string>
    <string name="trainLabel">Train:</string>
    <string name="navigate">Navigate</string>
    <string name="train">Train:</string>
</resources>
